--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -239,12 +239,13 @@ h1 {
 	padding-top: 0;
 	margin-bottom: 1.45rem;
 	color: inherit;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-		Helvetica Neue, sans-serif;
+	font-family: Georgia, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans,
+		Droid Sans, Helvetica Neue, sans-serif;
 	font-weight: bold;
 	text-rendering: optimizeLegibility;
 	font-size: 2.25rem;
 	line-height: 1.1;
+	text-align: center;
 }
 h2 {
 	margin-left: 0;
